# ZigPicoCMake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.zig  build.zig.zon  pico.zig
.github/workflows/: zig-build.yml
cmake/: pico-sdk-import.cmake  toolchain-import.cmake  toolchain-schema.json  toolchain.json
src/: main.zig  morse.zig  sdk.zig
